# ai-native-startup

./: .gitignore  .prettierignore  .prettierrc.json  .worktreeinclude  AGENTS.md  GIT-COMMIT-PR-MESSAGE.md  HARNESS-LAYER.md  HOOK-TESTING.md  eslint.config.mjs  package.json  pyproject.toml  pytest-sugar.conf
.claude/: settings.json  settings.local.json
.claude/agents/: code-simplifier.md  codex-runner.md  harness-simplifier.md  kb-fetcher.md  meta-agent.md
.claude/commands/: build.md  list-build-in-tools.md  meta-install.md  plan-w-team.md  ship.md
.claude/hooks/: block-coauthor-trailer.sh  block_attribution.py  check-spec-completeness.sh  check_spec_completeness.py  install_deps.py  lint.py
.claude/rules/: development-log.md  git-workflow.md  harness-hooks.md  memory-series.md  model-selection.md  task-tools.md
.codex/: config.toml  hooks.json
.codex/agents/: review-code-standards.toml  review-comment-accuracy.toml  review-silent-failure.toml  review-simplification.toml  review-test-coverage.toml  review-type-design.toml
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  chore.md  chore.yml  config.yml  epic-plan.md  epic-spec.md  epic.yml  feature.md  feature.yml
.github/PULL_REQUEST_TEMPLATE/: chore.md  docs.md  feat.md  fix.md  perf.md  refactor.md  style.md  test.md
ai-docs/: claude-code-hooks.md  index.md  sources.yaml
ai-docs/anthropic/: agent-teams.md  artifacts.md  deep-links.md  env-vars.md  headless.md  hooks-guide.md  hooks.md  mcp.md  (+18 more)
evals/: .gitignore
specs/: meta-agent-skill.md  meta-skill-rebuild.md  meta-skill-skill-creator-pipeline.md
(+381 files in other folders)
